@@ -1,3 +1,4 @@
+* make wavelength handling in PowderDiffraction more flexible
 * fix bug in SiGe alloy class
 * python2 fix for EDFFile which could have failed as described in issue #41
 * fix clear_bit utility function
